k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-service
  labels:
    name: customer-service
